refactor: improve index.html structure

--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Evanthys Frontend Challenge - Júnior</title>
+		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0 maximum-scale=1.0, user-scalable=no"
+		/>
+		<meta name="author" content="João Luiz Cambraia" />
+		<meta
+			name="keywords"
+			content="FHIR, healthcare, medical records, clinical encounters, patient data, electronic health records, EHR, medical appointments, healthcare dashboard, clinical data management"
+		/>
+		<meta
+			name="description"
+			content="Web interface for viewing and managing clinical encounters using FHIR API. Explore medical appointment data, patients and healthcare professionals with advanced filters and custom saved views."
+		/>
+		<title>Evanthys Frontend Challenge - Junior</title>
 	</head>
 	<body>
 		<div id="root"></div>
